@@ -1,0 +1,8 @@
+$set 42
+$ Two messages with auto-assigned numbers.
+Number1 Auto-assigned #1
+Number2 Auto-assigned #2
+$ Three messages with explicitly assigned numbers.
+0 Explicitly assigned #1
+1 Explicitly assigned #2
+2 Explicitly assigned #3
